fix font weight on game covers

--- a/points/src/styles.scss
+++ b/points/src/styles.scss
@@ -289,7 +289,7 @@ input[type='number'] {
   &__description {
     margin-bottom: 16px;
     text-align: justify;
-    font-weight: 100;
+    // font-weight: 100;
     font-size: 13.5px;
     line-height: 1.3;
   }
